FlightPath 5.x Changelog
========================

2015-12-31
  Initial commit of 5.x branch, from 4.10-dev branch. Enough has changed to warrent naming this a new core version.