@@ -6,6 +6,146 @@
 
 
 /**
+ * This is very similar to fp_get_form / fp_render_form, except in this case we are being passed
+ * the completed "render_array", which already contains all of our elements.  We will call
+ * hooks on it, sort by weights, and then return the rendered HTML.
+ */
+function fp_render_content($render_array = array()) {
+
+  $rtn = "";
+
+  // First, check to see if this render array has an "#id" field defined.  This is required.
+  $render_id = fp_get_machine_readable(trim(@$render_array["#id"]));
+  if ($render_id == "") {
+    fp_add_message(t("The render array supplied does not have an #id field set.  This must be
+                     machine-readable and unique.<br>Ex:  \$arr['#id'] = 'advise_course_description_popup';
+                     <br>It may be easiest to simply name it after the function which is creating the render array."), "error");
+    return "";
+  }
+
+  // Any hooks to alter this render array?  
+  $modules = modules_implement_hook("content_alter");
+  foreach ($modules as $module) {
+    call_user_func_array($module . '_content_alter', array(&$render_array, $render_id));
+  }
+
+  // Okay, now the fun part.  Re-order the elements by weight.  Lighter weights
+  // should float to the top.  Elements w/o a weight listed are assumed to have a weight of 0.
+  // Unfortunately we cannot use uasort, as it re-orders our indexes when weights are identical.
+    
+  // The first the I want to do is find out, what are the defined weights in this form, if any.
+  $defined_weights = array();
+  foreach ($render_array as $element) {
+          
+    if (!is_array($element)) continue;    
+    
+    if (!isset($element["weight"])) {
+       $element["weight"] = 0;
+    }
+    
+    $weight = (int)$element["weight"];
+    if (!in_array($weight, $defined_weights)) {
+      $defined_weights[] = $weight;
+    }
+  } 
+  
+  // Okay, now sort our weights.
+  sort($defined_weights);
+  
+  
+  // Before we get to assigning weights, we need to make sure
+  // that none of our form elements have a name which might cause us trouble.
+  // Namely, no element can be named "submit" (like a button) because it will
+  // interfere with our javascript functions.
+  $form2 = array();
+  foreach ($render_array as $key => $element) {
+    $name = $key;
+    if ($name == "submit") {
+      $name = "btn_submit";
+    }
+    
+    $form2[$name] = $element;    
+  }
+  
+  $form = $form2;
+  
+   
+  // Okay, now go through the weights and create a new form in THAT order.
+  $new_form = array();
+  foreach ($defined_weights as $dw) {
+    foreach ($form as $key => $element) {
+        
+      if (!is_array($element)) {
+        $new_form[$key] = $element;
+        continue;
+      }
+      
+      if (!isset($element["weight"])) $element["weight"] = 0;
+      $weight = (int)$element["weight"];
+      if ($weight == $dw) {
+        $new_form[$key] = $element;
+      }      
+    }
+  }  
+
+  // Okay, we should now be good to go!  
+  $render_array = $new_form;
+  
+  // We can now proceed with rendering this render_array.  It will be similar to fp_render_form.
+  $rtn .= "<div class='renderapi-content' id='render-$render_id'>";
+  $rtn .= fp_render_array($render_array);
+  $rtn .= "</div>";
+      
+  return $rtn;
+  
+}
+
+
+
+/**
+ * This takes a render_array and generates the HTML for it.  This usually is not called directly, but
+ * instead you should call fp_render_content() or fp_render_form()
+ */
+function fp_render_array($render_array, $use_callback = "") {
+  $rtn = "";
+  
+  foreach ($render_array as $name => $element) {
+    if (is_array($element) && (isset($element["type"]) || isset($element["value"]))) {
+        
+      // Is this a cfieldset (collapsible fieldset)?
+      if (@$element["type"] == "cfieldset") {
+        $celements = $element["elements"];  // get our list of form elements within this fieldset.
+        // Go through these new elements and prepare to display them inside a collapsible fieldset.
+        $html = "";
+        foreach ($celements as $k => $v) {
+          foreach ($celements[$k] as $name => $celement) {
+            $html .= fp_render_element($name, $celement, $use_callback);
+          }
+        }
+        
+        // add to c_fieldset
+        $rtn .= fp_render_c_fieldset($html, @$element["label"], @$element["start_closed"]);
+         
+      }
+      else {
+        // No, this is a normal element.  Not in a fieldset.
+        $rtn .= fp_render_element($name, $element, $use_callback);
+      }
+      
+      
+      
+    }    
+  }  
+  
+  return $rtn;
+  
+}
+
+
+
+
+
+/**
  * This function gets the form array, where the callback is the same as form_id.
  * It will also look for modules which may want to alter the form, using hook_form_alter,
  * and go ahead and apply that.
@@ -78,31 +218,6 @@ function fp_get_form($form_id, $params = array()) {
   return $new_form;
   
 }
-
-/**
- * This function is meant to be used by the uasort command, to help re-order 
- * a form array based on each element's weight value.  If weight is blank, it is assumed
- * to be 0 (zero).
- * 
- * Answers the question "is A LESS THAN b?"
- *   with:  -1 == true.  0 == they are equal.  1 = no, b is less than a.
- * 
- */
-function form_field_sort_compare_by_weight($element_a, $element_b) {
-
-  if (!is_array($element_a) || !is_array($element_b)) {
-    return 0;
-  }
-  
-  $weight_a = $element_a["weight"]*1;
-  $weight_b = $element_b["weight"]*1;
-
-  if ($weight_a == $weight_b) return -1;
-
-  return ($weight_a < $weight_b) ? -1 : 1;
-
-}
-
 
 /**
  * Render the form array from the callback to the screen, and
@@ -207,33 +322,8 @@ function fp_render_form($callback, $form_type = "") {
     $use_callback = $callback;
   }
   
-  foreach ($form as $name => $element) {
-    if (is_array($element) && (isset($element["type"]) || isset($element["value"]))) {
-        
-      // Is this a cfieldset (collapsible fieldset)?
-      if (@$element["type"] == "cfieldset") {
-        $celements = $element["elements"];  // get our list of form elements within this fieldset.
-        // Go through these new elements and prepare to display them inside a collapsible fieldset.
-        $html = "";
-        foreach ($celements as $k => $v) {
-          foreach ($celements[$k] as $name => $celement) {
-            $html .= fp_render_form_element($name, $celement, $use_callback);
-          }
-        }
-        
-        // add to c_fieldset
-        $rtn .= fp_render_c_fieldset($html, @$element["label"], @$element["start_closed"]);
-         
-      }
-      else {
-        // No, this is a normal element.  Not in a fieldset.
-        $rtn .= fp_render_form_element($name, $element, $use_callback);
-      }
-      
-      
-      
-    }    
-  }
+  
+  $rtn .= fp_render_array($form, $use_callback);
       
 
   // If this is a system settings form, go ahead and display the save button.
@@ -318,18 +408,23 @@ function form_has_errors() {
 
 
 /**
- * Returns the HTML to render this form element to the screen.
+ * Returns the HTML to render this form (or content) element to the screen.
  * $name is the HTML machine name.  $element is an array containing all we need to render it.
  * If you want default values to be taken from the SESSION (because we had form_errors, say, and we
  * want values to keep what we had between submissions) specify the callback to use in the
  * use_session_submission_values_for_callback variable.
  */
-function fp_render_form_element($name, $element, $use_session_submission_values_for_callback = "") {
+function fp_render_element($name, $element, $use_session_submission_values_for_callback = "") {
   $rtn = "";
 
   $type = @$element["type"]; 
   if ($type == "") $type = "markup";
   
+  if ($type == "do_not_render") return;  // not supposed to render this element.
+  
+  // TODO: Does the name start with a # character?  If so, do not attempt to render.
+  if (substr($name, 0, 1) == "#") return;  
+    
   $value = @$element["value"];
   $label = @$element["label"];
   $options = @$element["options"];
@@ -403,7 +498,15 @@ function fp_render_form_element($name, $element, $use_session_submission_values_
 
   // First of all, what is it's "type"?
   if ($type == "markup") {
+    if (is_string($attributes) && $attributes != "") {
+      $rtn .= "<div $attributes>";
+    }
+    
     $rtn .= "$value";
+    
+    if (is_string($attributes) && $attributes != "") {
+      $rtn .= "</div>";
+    }
   }
   else if ($type != "hidden" && $type != "checkbox") {
     $rtn .= "<label>$ast$label $popup_help_link</label>";
