@@ -1,5 +1,9 @@
 FlightPath 5.x Changelog
 ========================
 
+2015-01-04
+  Creating new render api system, for rendering arrays similar to form arrays.  This lets other modules hook in to make changes.
+  Changed forms.inc to render.inc
+
 2015-12-31
   Initial commit of 5.x branch, from 4.10-dev branch. Enough has changed to warrent naming this a new core version.
